# sample-s3-cross-region-compressor

./: .gitignore  CHANGELOG.MD  README.md  app.py  build_containers.bat  build_containers.sh  cost-estimations.xlsx  pylock.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test_loop_detection.py
configuration/: replication_config.json (example).json  settings.json (example).json
docs/: ADAPTIVE_COMPRESSION.md  ARCHITECTURE.md  BACKUP_MODE.md  CONFIGURATION.md  DEPLOYMENT.md  FARGATE_SCALING.md  MONITORING.md  SECURITY.md
docs/source_region/: README.md
docs/target_region/: README.md
s3_cross_region_compressor/: baseline_resources_stack.py  s3_replication_stack.py  source_baseline_stack.py  source_service_stack.py  target_baseline_stack.py
s3_cross_region_compressor/cr/: cost_estimator_cr.py
s3_cross_region_compressor/lambda/s3-object-filter-to-sqs/: s3-object-filter-to-sqs.py
s3_cross_region_compressor/resources/: __init__.py  alarms.py  athena_workgroup.py  catalog_bucket.py  cost_estimator.py  dashboard.py  dynamodb.py  ecr.py  ecs.py  glue_catalog.py  iam_roles.py  kms.py  lambda_functions.py  notifications.py  s3_bucket.py  sqs.py  step_functions.py  vpc.py
s3_cross_region_compressor/utils/: __init__.py  capacity_provider_aspect.py  config_utils.py  dynamodb_utils.py  ecr_image_utils.py  ecs_utils.py  iam_utils.py  log_retention.py  s3_utils.py
