[project]
name = "s3-cross-region-compressor"
version = "1.0.0"
description = "Reference Architecture for S3 Compression strategy to reduce cross-region replication data transfer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.188.0",
    "cdk-ecr-deployment>=4.0.1",
    "cdk-nag>=2.36.24",
    "cloudcomponents-cdk-dynamodb-seeder>=2.4.0",
    "requests==2.32.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.uv.workspace]
members = ["bin/source_region", "bin/target_region"]

[dependency-groups]
dev = [
    "aws-embedded-metrics>=3.3.0",
    "boto3>=1.37.18",
    "botocore>=1.37.18",
    "cachetools>=5.5.2",
    "moto>=5.1.4",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "python-json-logger>=3.3.0",
    "pyzstd>=0.16.2",
]
